Adding the possibility to choose if we'd like to enable the light bulb service or not, and also adding the possibility to set the room name in configuration file.

--- a/homebridge/config.json
+++ b/homebridge/config.json
@@ -18,7 +18,9 @@
             "name": "Particle Sensors",
             "cloud_url": "https://api.spark.io/v1/devices/",
             "deviceid": "replace with your deviceid",
-            "accesstoken": "replace with your access token"
+            "accesstoken": "replace with your access token",
+			"bulb_service": "yes",
+			"room_name": "Bedroom"
         }
     ]
 }		
